src/ui/snapshots/devsweep__ui__list__tests__snapshot_docker_daemon_stopped_note.snap
---
source: src/ui/list.rs
expression: "render(&a, 100, 12).backend()"
---
"┌ devsweep ─ /w ───────────────────────────────────────────────────────────────────────────────────┐"
"│ ── machine ───────────────│ Docker                                                    sort: size │"
"│▌ Docker               0 B │ ──────────────────────────────────────────────────────────────────── │"
"│                           │ daemon stopped                                                       │"
"│                           │ Start Docker Desktop, then press r to scan again.                    │"
"│                           │                                                                      │"
"│                           │                                                                      │"
"│                           │                                                                      │"
"│                           │                                                                      │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ 0 selected · 0 B   space toggle · ⏎ review · ? help · a all · s sort · / filter · q quit         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
