src/ui/snapshots/devsweep__ui__list__tests__snapshot_empty_folder_source.snap
---
source: src/ui/list.rs
assertion_line: 773
expression: "render(&a, 100, 12).backend()"
---
"┌ devsweep ─ /w ───────────────────────────────────────────────────────────────────────────────────┐"
"│ ── this folder ───────│ Worktrees                                                     sort: size │"
"│▌ Worktrees        0 B │ ──────────────────────────────────────────────────────────────────────── │"
"│                       │ Nothing to clean under /w.                                               │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ 0 selected · 0 B   space toggle · ⏎ review · ? help · a all · s sort · / filter · q quit         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
