src/ui/snapshots/devsweep__ui__list__tests__snapshot_help_overlay.snap
---
source: src/ui/list.rs
assertion_line: 722
expression: "render(&a, 100, 24).backend()"
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ ── this folder ───────────────│ Worktrees  1.5 GB · 5 items                           sort: size │"
"│  Artifacts  █████▉    14.2 GB │ ──────────────────────────────────────────────────────────────── │"
"│▌ Worktrees  ▋     ┌ help · any key closes ───────────────────────────────────┐an · safe   412 MB │"
"│                   │  ↑↓ j k     move                                         │an · safe   388 MB │"
"│ ── machine ───────│  tab ← →    switch between sources and items             │les         301 MB │"
"│  iOS        ██████│  space      select or unselect the item                  │ 4821       290 MB │"
"│  Android          │  a          select every unlocked item of the source     │e 41d        95 MB │"
"│  Docker           │  s          sort by size, name or age                    │                   │"
"│  Dev caches ███▍  │  /          filter by name                               │                   │"
"│                   │  r          scan again                                   │                   │"
"│                   │  ⏎          review what will be removed                  │                   │"
"│                   │  q          quit                                         │                   │"
"│                   │                                                          │                   │"
"│                   │  [x]        selected                                     │                   │"
"│                   │   ⊘         locked: in use, cannot be selected           │                   │"
"│                   │  safe       regenerates by itself; preselected           │                   │"
"│                   │  merged     its branch is in the default branch          │                   │"
"│                   │  dirty      would lose uncommitted or ignored files      │                   │"
"│                   │  stale      no commit for a while                        │                   │"
"│                   └──────────────────────────────────────────────────────────┘                   │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ 3 selected · 9.0 GB   space toggle · ⏎ review · ? help · a all · s sort · / filter · q quit      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
