src/ui/snapshots/devsweep__ui__list__tests__snapshot_scanning.snap
---
source: src/ui/list.rs
assertion_line: 629
expression: "render(&a, 100, 20).backend()"
---
"┌ devsweep ─ /Users/u/Workspace ───────────────────────────────────────────────────────────────────┐"
"│ ── this folder ───────│ Artifacts  ⠋ scanning · 0 found                               sort: size │"
"│▌ Artifacts          ⠋ │ ──────────────────────────────────────────────────────────────────────── │"
"│  Worktrees          ⠋ │ Rows appear here as they are found.                                      │"
"│                       │                                                                          │"
"│ ── machine ───────────│                                                                          │"
"│  iOS                ⠋ │                                                                          │"
"│  Android            ⠋ │                                                                          │"
"│  Docker             ⠋ │                                                                          │"
"│  Dev caches         ⠋ │                                                                          │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│                       │                                                                          │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ 0 selected · 0 B   space toggle · ⏎ review · ? help · a all · s sort · / filter · q quit         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
