src/ui/snapshots/devsweep__ui__list__tests__snapshot_too_small.snap
---
source: src/ui/list.rs
assertion_line: 353
expression: "render(&mockup(), 30, 8).backend()"
---
"                              "
"                              "
"                              "
"                              "
"      Terminal too small      "
"                              "
"                              "
"                              "
