src/ui/snapshots/devsweep__ui__list__tests__snapshot_trash_after_opening_settings.snap
---
source: src/ui/list.rs
assertion_line: 729
expression: "render(&a, 100, 12).backend()"
---
"┌ devsweep ─ /w ───────────────────────────────────────────────────────────────────────────────────┐"
"│ ── machine ───────│ Trash                                                             sort: size │"
"│▌ Trash  no access │ ──────────────────────────────────────────────────────────────────────────── │"
"│                   │ macOS only lets apps with Full Disk Access read the Trash.                   │"
"│                   │ Ghostty doesn't have it yet.                                                 │"
"│                   │                                                                              │"
"│                   │ o  open System Settings › Full Disk Access again                             │"
"│                   │    Opened. After turning Ghostty on, quit it and run devsweep again.         │"
"│                   │                                                                              │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ 0 selected · 0 B   space toggle · ⏎ review · ? help · a all · s sort · / filter · q quit         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
