src/ui/snapshots/devsweep__ui__list__tests__snapshot_trash_permission_denied_on_linux.snap
---
source: src/ui/list.rs
expression: "render(&a, 100, 12).backend()"
---
"┌ devsweep ─ /w ───────────────────────────────────────────────────────────────────────────────────┐"
"│ ── machine ───────│ Trash                                                             sort: size │"
"│▌ Trash      error │ ──────────────────────────────────────────────────────────────────────────── │"
"│                   │ permission denied reading the Trash                                          │"
"│                   │ Press r to scan again.                                                       │"
"│                   │                                                                              │"
"│                   │                                                                              │"
"│                   │                                                                              │"
"│                   │                                                                              │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ 0 selected · 0 B   space toggle · ⏎ review · ? help · a all · s sort · / filter · q quit         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
