src/ui/snapshots/devsweep__ui__list__tests__snapshot_trash_without_disk_access.snap
---
source: src/ui/list.rs
assertion_line: 716
expression: "render(&a, 100, 12).backend()"
---
"┌ devsweep ─ /w ───────────────────────────────────────────────────────────────────────────────────┐"
"│ ── machine ───────│ Trash                                                             sort: size │"
"│▌ Trash  no access │ ──────────────────────────────────────────────────────────────────────────── │"
"│                   │ macOS only lets apps with Full Disk Access read the Trash.                   │"
"│                   │ Ghostty doesn't have it yet.                                                 │"
"│                   │                                                                              │"
"│                   │ o  open System Settings › Full Disk Access                                   │"
"│                   │    turn Ghostty on, then quit it and run devsweep again                      │"
"│                   │                                                                              │"
"│──────────────────────────────────────────────────────────────────────────────────────────────────│"
"│ 0 selected · 0 B   space toggle · ⏎ review · ? help · a all · s sort · / filter · q quit         │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
